update frontend Dockerfile

--- a/frontend_2/Dockerfile
+++ b/frontend_2/Dockerfile
@@ -12,8 +12,8 @@ USER nodejs
 WORKDIR /home/nodejs
 
 COPY --chown=nodejs:nodejs frontend_2/package*.json ./
-COPY --chown=nodejs:nodejs frontend_2/src ./src
-COPY --chown=nodejs:nodejs frontend_2/public ./
+RUN npm install --force --legacy-peer-deps
+COPY --chown=nodejs:nodejs frontend_2/. .
 
 RUN npm run build
 
