update Dockerfiles / Events

--- a/events/Dockerfile
+++ b/events/Dockerfile
@@ -13,7 +13,7 @@ WORKDIR /home/nodejs
 
 COPY --chown=nodejs:nodejs events/package*.json ./
 RUN npm install
-COPY --chown=nodejs:nodejs events/src ./src
+COPY --chown=nodejs:nodejs events/services ./services
 COPY --chown=nodejs:nodejs events/controllers ./controllers
 COPY --chown=nodejs:nodejs events/models ./models
 COPY --chown=nodejs:nodejs events/routes ./routes
